--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "aws-sdk": "^2.1548.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.9.10",
     "razorpay": "^2.9.2",
     "serve-index": "^1.9.1"
   }
